# ft_turing

./: .gitignore  LICENSE  README.md  complex.py  dune-project  essais.py  ft_turing.opam  makefile  memControle.py  ocaml
._d/srcs/: colors.d  interactive_mode.d  machine.d  main.d  tape.d  utils.d
docker_ocaml/: Dockerfile  build.sh  dockerfile_run  init.sh
essais/: lecture.ml  machine.ml  main.ml  makefile  tape.ml  utils.ml
essais_modulaire/: interactive_mode.ml  machine.ml  machine.mli  main.ml  makefile  parsing.ml  tape.ml  types.ml  utils.ml
machines/: 02n.json  0n12n.json  0n1n.json  README.md  UTM_0n12n.json  UTM_palindrome.json  UTM_unary_add.json  UTM_unary_sub.json  X+1.json  X+1.md  X+Y.json  X-1.json  gen_palindrome.py  generatorUTM.py  generator_cmd.py  loop.json  machines.md  palindrome copy.json  palindrome.json  palindrome2.json  palindrome_letters.json  unary_add.json  unary_sub.json  unary_sub_bis.json  yes.json
prog_Object/: colors.ml  machine.ml  main.ml  makefile  tape.ml  tape.mli
srcs/: dune  exemple.json  interactive_mode.ml  interactive_mode.mli  machine.ml  machine.mli  main.ml  parsing.ml  parsing.mli  tape.ml  tape.mli  types.ml  utils.ml
tests/: test.py  tester.py  tests.py  tools.py
tests/wrongJsons/: emptyFinals.json  expectToReadNonAlphabet.json  finalsNotInStates.json  stringInTransitions.json
