(lang dune 3.10)

(name ft_turing)

(generate_opam_files true)

(source
 (github sirius911/ft_turing))

(authors "Cyrille LORIN")

(maintainers "Cyrille LORIN")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ft_turing)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune yojson)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
